Basic render templates

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ .Padname }} — Pad</title>
+    <title>{{ .Name }} — Pad</title>
     <link href="/static/favicon.gif" rel="shortcut icon" type="image/gif" />
     <link href="/static/css/normalize.css" rel="stylesheet" media="screen" />
     <link href="/static/css/application.css" rel="stylesheet" media="screen" />
