--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ .Name }} — Pad</title>
-    <link href="/static/favicon.gif" rel="shortcut icon" type="image/gif" />
+    <link href="/static/favicon.ico" rel="shortcut icon" type="image/ico" />
     <link href="/static/css/normalize.css" rel="stylesheet" media="screen" />
     <link href="/static/css/application.css" rel="stylesheet" media="screen" />
     <link href="/static/css/print.css" rel="stylesheet" media="print" />
