Remove unused js

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,9 +4,11 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ .Name }} — Pad</title>
-    <link href="/static/favicon.ico" rel="shortcut icon" type="image/ico" />
+
+    <link href="/favicon.ico" rel="shortcut icon" type="image/ico" />
     <link href="/static/css/normalize.css" rel="stylesheet" media="screen" />
     <link href="/static/css/application.css" rel="stylesheet" media="screen" />
     <link href="/static/css/print.css" rel="stylesheet" media="print" />
@@ -26,7 +28,6 @@
     <div id="loading"></div>
 
     <script src="https://code.jquery.com/jquery.min.js"></script>
-    <script src="/static/js/jquery.textarea.js"></script>
     <script src="/static/js/application.js"></script>
 </body>
 
