--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ .Name }} — Pad</title>
+    <title>{{ .Padname }} — Pad</title>
 
     <link href="/favicon.ico" rel="shortcut icon" type="image/ico" />
     <link href="/static/css/normalize.css" rel="stylesheet" media="screen" />
