--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -9,9 +9,9 @@
     <title>{{ .Padname }} — Pad</title>
 
     <link href="/favicon.ico" rel="shortcut icon" type="image/ico" />
-    <link href="/static/css/normalize.css" rel="stylesheet" media="screen" />
-    <link href="/static/css/application.css" rel="stylesheet" media="screen" />
-    <link href="/static/css/print.css" rel="stylesheet" media="print" />
+    <link href="/assets/css/normalize.css" rel="stylesheet" media="screen" />
+    <link href="/assets/css/application.css" rel="stylesheet" media="screen" />
+    <link href="/assets/css/print.css" rel="stylesheet" media="print" />
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <div id="loading"></div>
 
     <script src="https://code.jquery.com/jquery.min.js"></script>
-    <script src="/static/js/application.js"></script>
+    <script src="/assets/js/application.js"></script>
 </body>
 
 </html>
